[package]
name = "rayfork"
version = "0.0.1"
authors = ["Dacode45 <davidrolandayeke@gmail.com>"]
license = "MIT or Zlib"
description = "Safe Rust bindings for Rayfork."
documentation = "https://docs.rs/rayfork-sys"
repository = "https://github.com/dacode45/rayfork-rs"
keywords = ["api-bindings", "raylib", "rayfork", "gamedev"]
categories = ["api-bindings", "game-engines", "graphics"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayfork-sys = { path = "../rayfork-sys", version = "0.0.1" }
glutin = "0.22.0" 
glow = "0.4.0"
gl_generator = "0.14"
gl = "0.14"
